2018-10-18: summary of changes from 2.4.1 to 2.5.0
--------------------------------------------------

	- Applied a series of patches I'd been using at work that somehow
	  fell through the cracks for the last 10 years.  :-/

	  Of note:
	    - SRP_INSTALLINFO no longer skips files installed after the
	      dir file
	    - SRP_INSTALLINFO is now a default flag
	    - SRP_NO_COMPILE removed from default flags
	    - SRP_LDCONFIG now actually runs ldconfig after installing
	    - added SRP_NOINSTALL_LA flag (and addit it to defaults)
	    - guarded against dlopen segfault
	    - keep "statically linked" out of deps_lib

	- squashed bug #098 (blank/special chars in installed filenames)


2007-06-12: summary of changes from 2.4.0 to 2.4.1
--------------------------------------------------
	- squashed bug #094 (dist-bzip2 CVS files)
	- squashed bug #093 (new srpbak code)


2007-04-06: summary of changes from 2.3.0 to 2.4.0
--------------------------------------------------
	- squashed bug #083 (brp prepost exceptions)
	- squashed bug #087 (DEVDATE multiple expansion)
	- squashed bug #085 (Makefile.common)
	- squashed bug #086 (foo dist target should be dist-brp)
	- squashed bug #017 (sr.exec_path)
	- squashed bug #088 (dist-* target deps)
	- squashed bug #084 (SRP_CHAIN)
	- squashed bug #089 (SRP_{,NO_}LEFTOVERS)
	- squashed bug #091 (python bug #1609958)
	- squashed bug #092 (SRP_CHAIN upgrade)

	Fixing bug #085 introduces SRP's Makefile.common.  This makefile can
	be used by package maintainers to consistently create
	foo-x.y.z.tar.bz2, foo-x.y.z-r.srp, and foo-x.y.z-r.platform.id.brp
	targets.  See Info files and example packages for instructions.

	Fixing bug #084 introduces a new srp_flag: SRP_CHAIN.  This flag can
	be used to generate multiple BRPs (or installed packages) from a
	single SRP.  For example, building the foo-1.0-1.srp package would
	result in three stand-alone BRPs: foo-1.0-1.linux.i686.brp,